--- a/src/css/section1.css
+++ b/src/css/section1.css
@@ -1,13 +1,15 @@
 .slider-container {
     width: 100%;
+    height: 251px;
     margin: auto;
-    padding: 20px 0;
+    /* padding: 10px 0; */
+    border-bottom: 1px solid linear-gradient(45deg,#ff7eb3, dodgerblue);
 }
 
 .ad-box {
     position: relative;
     width: 100%;
-    height: 250px; /* Adjust height as needed */
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,11 +17,11 @@
     margin: 0 25px;
 }
 
+
 .ad-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* border-radius: 10px; */
 }
 
 .overlay {
